--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -5,71 +5,55 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Descargar RustDesk - RobertSoftware</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
 <style>
-    * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
-
-    html, body {
-        height: 100%;
-        font-family: 'Inter', sans-serif;
-        background-color: #e6eefb;
-        color: #1a1a1a;
-    }
-
     body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        font-family: Arial, sans-serif;
+        background-color: #e6eefb;
+        color: #333;
         text-align: center;
         padding: 40px 20px;
+        margin: 0;
     }
 
     .logo {
-        max-width: 220px;
-        margin-bottom: 40px;
+        max-width: 180px;
+        margin-bottom: 20px;
+    }
+
+    .backup-text {
+        font-size: 14px;
+        margin-bottom: 8px;
+        color: #555;
     }
 
     h1 {
-        font-size: 50px; 
-        font-weight: 700;
-        margin-bottom: 25px;
-        line-height: 1.2;
+        font-size: 36px; 
+        margin: 15px 0;
+        font-weight: bold;
+        color: #222;
     }
 
     .message {
-        font-size: 20px;
+        font-size: 16px;
+        margin-top: 15px;
+        line-height: 1.5;
         color: #333;
-        line-height: 1.6;
-        margin-bottom: 40px;
-        max-width: 600px;
-    }
-
-    .download-links {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 20px;
-        margin-bottom: 50px;
     }
 
     .download-link {
         display: inline-flex;
         align-items: center;
-        gap: 12px;
-        padding: 16px 36px;
-        font-size: 18px;
-        font-weight: 600;
-        color: #fff;
-        text-decoration: none;
+        justify-content: center;
+        gap: 8px;
+        margin: 10px;
+        padding: 12px 25px;
         background-color: #007bff;
+        color: white;
+        text-decoration: none;
         border-radius: 8px;
+        font-weight: bold;
+        font-size: 16px;
+        cursor: pointer;
         transition: background-color 0.3s;
     }
 
@@ -78,15 +62,28 @@
     }
 
     .download-link img {
-        width: 28px;
-        height: 28px;
+        width: 24px;
+        height: 24px;
+    }
+
+    .arrow-top {
+        position: fixed;
+        top: 20px;
+        right: 60px;
+        width: 60px;
+        z-index: 1000;
+        pointer-events: none;
+        display: none;
     }
 
     footer {
-        font-size: 16px;
+        margin-top: 30px;
+        font-size: 14px;
         color: #555;
         text-align: center;
-        line-height: 1.6;
+        background-color: #e6eefb;
+        padding: 15px 10px;
+        line-height: 1.4;
     }
 
     footer a {
@@ -97,37 +94,49 @@
     footer a:hover {
         text-decoration: underline;
     }
-
-    @media (max-height: 700px) {
-        body {
-            justify-content: flex-start;
-            padding-top: 40px;
-        }
-    }
 </style>
 </head>
 <body>
 
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+
+<p class="backup-text">Respaldado por:</p>
 <img src="logo.png" alt="RobertSoftware" class="logo">
 
 <h1>RustDesk</h1>
 <p class="message">
-    Seleccione su sistema operativo para iniciar la descarga.
+    Seleccione su sistema operativo y haga clic en el botón correspondiente.<br>
+    La descarga se iniciará en esta misma página.
 </p>
 
-<div class="download-links">
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" class="download-link">
-        <img src="windows.svg" alt="Windows"> Windows
-    </a>
-    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" class="download-link">
-        <img src="macos.svg" alt="macOS"> macOS
-    </a>
-</div>
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+   class="download-link" id="btnWin" download>
+   <img src="windows.svg" alt="Windows"> Descargar para Windows
+</a>
+
+<a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+   class="download-link" id="btnMac" download>
+   <img src="macos.svg" alt="macOS"> Descargar para macOS
+</a>
+
+<script>
+    const gif = document.getElementById('downloadGif');
+    const buttons = [document.getElementById('btnWin'), document.getElementById('btnMac')];
+
+    buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+            gif.style.display = 'block';
+        });
+    });
+</script>
 
 <footer>
     <p>Distribución segura de RustDesk por <strong>Robert Software</strong></p>
     <p>© 2025 Robert Software. Todos los derechos reservados.</p>
-    <p>WhatsApp: <a href="https://wa.me/51945482880" target="_blank">945482880</a> | Correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a></p>
+    <p>Para soporte técnico o consultas, contáctenos a través de WhatsApp: 
+        <a href="https://wa.me/51945482880" target="_blank">945482880</a> 
+        o correo: <a href="mailto:rs.robertsoftware@gmail.com">rs.robertsoftware@gmail.com</a>
+    </p>
 </footer>
 
 </body>
