--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -105,8 +105,7 @@
 
 <h1>RustDesk</h1>
 <p class="message">
-    Seleccione su sistema operativo y haga clic en el botón correspondiente.<br>
-    La descarga se iniciará en esta misma página.
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
 </p>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
