--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -12,23 +12,12 @@
         font-family: Arial, sans-serif;
         background-color: #e6eefb;
         color: #333;
-        display: flex;
-        flex-direction: column;
         text-align: center;
+        position: relative; /* para que el footer absoluto funcione */
     }
 
     body {
-        padding: 40px 20px;
-        min-height: 100vh;
-    }
-
-    /* Contenedor central para centrar todo */
-    .main-content {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        padding: 40px 20px 100px; /* espacio inferior para que el footer no tape contenido */
     }
 
     .logo {
@@ -55,6 +44,8 @@
         line-height: 1.5;
         color: #333;
         max-width: 600px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .download-links {
@@ -101,7 +92,9 @@
     }
 
     footer {
-        margin-top: auto; /* Footer pegado al final */
+        position: absolute;
+        bottom: 0;
+        width: 100%;
         font-size: 14px;
         color: #555;
         background-color: #e6eefb;
@@ -121,28 +114,26 @@
 </head>
 <body>
 
-<div class="main-content">
-    <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
+<img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
-    <p class="backup-text">Respaldado por:</p>
-    <img src="logo.png" alt="RobertSoftware" class="logo">
+<p class="backup-text">Respaldado por:</p>
+<img src="logo.png" alt="RobertSoftware" class="logo">
 
-    <h1>RustDesk</h1>
-    <p class="message">
-        Seleccione su sistema operativo para iniciar la descarga de RustDesk.
-    </p>
+<h1>RustDesk</h1>
+<p class="message">
+    Seleccione su sistema operativo para iniciar la descarga de RustDesk.
+</p>
 
-    <div class="download-links">
-        <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-           class="download-link" id="btnWin" download>
-           <img src="windows.svg" alt="Windows"> Descargar para Windows
-        </a>
+<div class="download-links">
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
+       class="download-link" id="btnWin" download>
+       <img src="windows.svg" alt="Windows"> Descargar para Windows
+    </a>
 
-        <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-           class="download-link" id="btnMac" download>
-           <img src="macos.svg" alt="macOS"> Descargar para macOS
-        </a>
-    </div>
+    <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
+       class="download-link" id="btnMac" download>
+       <img src="macos.svg" alt="macOS"> Descargar para macOS
+    </a>
 </div>
 
 <script>
