--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -13,6 +13,8 @@
         text-align: center;
         padding: 40px 20px;
         margin: 0;
+        position: relative; /* para que el footer absoluto funcione */
+        min-height: 100vh;
     }
 
     .logo {
@@ -77,13 +79,17 @@
     }
 
     footer {
-        margin-top: 30px;
+        position: absolute;
+        bottom: 20px; /* distancia desde el borde inferior */
+        left: 50%;
+        transform: translateX(-50%);
         font-size: 14px;
         color: #555;
         text-align: center;
         background-color: #e6eefb;
-        padding: 15px 10px;
+        padding: 10px 20px;
         line-height: 1.4;
+        max-width: 800px; /* opcional, para que no se extienda demasiado */
     }
 
     footer a {
