--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -58,7 +58,7 @@
         font-size: 16px;
         cursor: pointer;
         transition: background-color 0.3s;
-        flex-shrink: 0; /* evita que se agranden */
+        flex-shrink: 0;
     }
 
     .download-link:hover {
@@ -97,10 +97,10 @@
     }
 
     .carousel-track img {
-        width: 100%;
+        width: 25%;
         height: auto;
         border-radius: 12px;
-        object-fit: contain; /* asegura que no se corte la imagen */
+        object-fit: contain;
     }
 
     @keyframes scroll {
@@ -109,16 +109,15 @@
     }
 
     footer {
-        margin-top: auto;
         font-size: 14px;
         color: #555;
         text-align: center;
         background-color: #e6eefb;
-        padding: 10px 20px;
+        padding: 20px 20px 10px 20px;
         line-height: 1.4;
         max-width: 800px;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto 0 auto;
+        margin-top: auto; /* Empuja el footer hacia abajo */
     }
 
     footer a {
