--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -14,8 +14,6 @@
         padding: 40px 20px;
         margin: 0;
         min-height: 100vh;
-        display: flex;
-        flex-direction: column;
     }
 
     .logo {
@@ -58,7 +56,6 @@
         font-size: 16px;
         cursor: pointer;
         transition: background-color 0.3s;
-        flex-shrink: 0;
     }
 
     .download-link:hover {
@@ -100,7 +97,6 @@
         width: 25%;
         height: auto;
         border-radius: 12px;
-        object-fit: contain;
     }
 
     @keyframes scroll {
@@ -108,6 +104,7 @@
         100% { transform: translateX(-75%); }
     }
 
+    /* Footer corregido para que no se superponga */
     footer {
         font-size: 14px;
         color: #555;
@@ -116,8 +113,7 @@
         padding: 20px 20px 10px 20px;
         line-height: 1.4;
         max-width: 800px;
-        margin: 0 auto 0 auto;
-        margin-top: auto; /* Empuja el footer hacia abajo */
+        margin: 30px auto 0 auto; /* Se separa del contenido de arriba y empuja hacia abajo */
     }
 
     footer a {
