--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -13,7 +13,6 @@
         text-align: center;
         padding: 40px 20px;
         margin: 0;
-        position: relative;
         min-height: 100vh;
     }
 
@@ -32,8 +31,7 @@
         font-size: 36px; 
         margin: 15px 0;
         font-weight: bold;
-        color: #1a1a1a;
-        text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+        color: #222;
     }
 
     .message {
@@ -57,13 +55,11 @@
         font-weight: bold;
         font-size: 16px;
         cursor: pointer;
-        transition: background-color 0.3s, transform 0.2s;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        transition: background-color 0.3s;
     }
 
     .download-link:hover {
         background-color: #0056b3;
-        transform: translateY(-2px);
     }
 
     .download-link img {
@@ -79,12 +75,6 @@
         z-index: 1000;
         pointer-events: none;
         display: none;
-        animation: float 2s ease-in-out infinite alternate;
-    }
-
-    @keyframes float {
-        0% { transform: translateY(0); }
-        100% { transform: translateY(-8px); }
     }
 
     /* Carrusel de imágenes */
@@ -94,8 +84,7 @@
         max-width: 600px;
         margin: 30px auto;
         border-radius: 12px;
-        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-        border: 1px solid rgba(0,0,0,0.05);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     .carousel-track {
@@ -115,15 +104,16 @@
         100% { transform: translateX(-75%); }
     }
 
+    /* Footer corregido para que no se superponga */
     footer {
         font-size: 14px;
         color: #555;
         text-align: center;
         background-color: #e6eefb;
-        padding: 10px 20px;
+        padding: 20px 20px 10px 20px;
         line-height: 1.4;
         max-width: 800px;
-        margin: 40px auto 0; /* footer se mueve hacia abajo sin tocar layout */
+        margin: 30px auto 0 auto; /* Se separa del contenido de arriba y empuja hacia abajo */
     }
 
     footer a {
@@ -133,7 +123,6 @@
 
     footer a:hover {
         text-decoration: underline;
-        color: #004080;
     }
 </style>
 </head>
