--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -158,12 +158,12 @@
 </p>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.exe" 
-   class="download-link" id="btnWin" download>
+   class="download-link" id="btnWin" target="_blank">
    <img src="windows.svg" alt="Windows"> Descargar para Windows
 </a>
 
 <a href="https://github.com/rustdesk/rustdesk/releases/download/1.4.2/rustdesk-1.4.2-x86_64.dmg" 
-   class="download-link" id="btnMac" download>
+   class="download-link" id="btnMac" target="_blank">
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
