--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -143,9 +143,48 @@
             font-size: 18px;
         }
     }
+
+    /* Cinta corporativa */
+    .corporate-ticker {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: #003366;
+        overflow: hidden;
+        height: 40px;
+        z-index: 9999;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+        display: flex;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    .ticker-text {
+        display: inline-block;
+        white-space: nowrap;
+        color: #ffffff;
+        font-weight: 600;
+        font-family: 'Arial', sans-serif;
+        font-size: 16px;
+        padding-left: 100%;
+        animation: scrollTicker 20s linear infinite;
+    }
+
+    @keyframes scrollTicker {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-100%); }
+    }
 </style>
 </head>
 <body>
+
+<!-- Cinta corporativa -->
+<div class="corporate-ticker">
+  <div class="ticker-text">
+    Distribución oficial y segura de RustDesk por Robert Software - Descargue las versiones más recientes y confiables para Windows y macOS directamente desde los enlaces oficiales.
+  </div>
+</div>
 
 <img src="flecha-arriba.gif" alt="" class="arrow-top" id="downloadGif">
 
